# django_3_book

project_blog/: Dockerfile  docker-compose.yml  pyproject.toml
project_blog/blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
project_blog/blog/management/commands/: init_admin.py
project_blog/blog/migrations/: 0002_auto_20210414_1532.py  0003_post_tags.py
project_blog/blog/templates/blog/: base.html
project_blog/blog/templates/blog/post/: detail.html  list.html  search.html
project_blog/blog/templatetags/: blog_tags.py
project_blog/project_blog/: settings.py  urls.py
social_media/: pyproject.toml
social_media/app/: asgi.py  settings.py  urls.py  wsgi.py
social_media/core/: admin.py  forms.py  models.py  urls.py  views.py
social_media/core/migrations/: 0001_initial.py
social_media/core/templates/: base.html
social_media/core/templates/account/: dashboard.html  edit.html  login.html  register.html
social_media/core/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
